# studyapp

./: .gitignore  CMakeLists.txt  MenuInit.cpp  README.md  TODO  flashcards.h  input.cpp  lib.h  library.txt  main  main.cpp  menus.h  newfile.txt  parser.h  practice.cpp  test.cpp  testCases.txt  testFile.txt  testing.h
extras/: small.txt  testCases.txt
include/: flashcardmanager.h  menus.h  parser.h
libs/: flashcards.h  input.cpp
scratch/: parser.cpp
src/: CMakeLists.txt  flashcardmanager.cpp  main.cpp  menus.cpp  parser.cpp
src/head/: flashcardmanager.h  menus.h  parser.h  utility.h
